# sdplane-oss

./: .clang-format  .gitignore  AUTHORS  CITATION.cff  CLAUDE.md  CONTRIBUTORS  ChangeLog  LICENSE  LICENSE.MIT  Makefile.am  NEWS  README.ja.md  README.licensing  README.md  README.tag  TODO  autogen.sh  build-debian-prep.sh  build-debian.sh  configure.ac  em_route_parse.c  l3fwd_acl.h  l3fwd_em.h  l3fwd_em_sequential.h  l3fwd_fib.c  l3fwd_lpm.c  l3fwd_lpm_sse.h  l3fwd_route.h  main.c  make-src-release.sh  sdplane.service  upstream-exclude.txt
.github/: pull_request_template.md
.github/workflows/: check-format.yaml  ci.yaml
ai-workspace/: README.md
ai-workspace/logs/: session-template.md
ai-workspace/templates/: ai-comment-templates.h  ai-function-template.c
app/: Makefile.am  opensh.c  vty_server.c  vty_shell.c  vtyd.c
debian/: README.Debian  changelog  control  copyright  debhelper-build-stamp  rules
doc/: README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.th.md  README.zh.md  install-memo-new.txt  install-memo-topton.txt  install-memo.txt  misc.txt  nettlp-memo.txt  sdplane-install-memo-v3.txt
doc/manual/: README.md  debug-logging.md  device-management.md  dpdk-integration-guide.md  enhanced-repeater-application.md  enhanced-repeater.md  l2-repeater-application.md  lthread-management.md  nettlp.md  packet-generation.md  packet-generator-application.md  port-management.md  queue-configuration.md  routing.md  system-monitoring.md  tap-interface.md  thread-information.md  vty-shell.md  worker-management.md
doc/manual/de/: README.md  build-debian-package.md  build-install-source.md  debug-logging.md  device-management.md  dpdk-integration-guide.md  enhanced-repeater-application.md  enhanced-repeater.md  install-dependencies.md  l2-repeater-application.md  lthread-management.md  packet-generation.md  packet-generator-application.md  port-management.md  queue-configuration.md  routing.md  system-configuration.md  system-monitoring.md  tap-interface.md  thread-information.md  vty-shell.md  (+2 more)
etc/: 50-netplan-sdplane.yaml  iptables-rules.v4  iptables-rules.v6  sdplane-topton.conf  sdplane.conf.sample  sdplane.service
example-config/: sdplane-pktgen-mlx.conf  sdplane-pktgen.conf  sdplane-router.conf  sdplane-rte-flow.conf  sdplane-simple-router.conf  sdplane-srv6.conf  sdplane-topton.conf  sdplane_enhanced_repeater.conf  sdplane_l2_repeater.conf  sdplane_l2fwd.conf  sdplane_l3_connector.conf  sdplane_l3fwd-lpm.conf
example-config/control_plane/: daemons  frr.conf  manage_control_plane.sh  sdplane_router.conf  usage.md  vtysh.conf
l2fwd/: Makefile.am
l3fwd/: Makefile.am
lib/: Makefile.am  command.c  command.h  command_shell.c  command_shell.h  debug.h  debug_cmd.c  includes.h  shell.c  shell.h  shell_fselect.c  termio.c
lib/sdplane/: command.c  command.h  command_shell.c  command_shell.h  debug.c  debug.h  debug_backtrace.h  debug_category.h  debug_cmd.c  debug_cmd.h  debug_log.c  debug_log.h  debug_zcmdsh.c  debug_zcmdsh.h  exec_limit.c  exec_limit.h  file.c  file.h  flag.h  libsdplane-version-c.sh  libsdplane_version.h  log.c  log.h  log_cmd.c  log_cmd.h  ptree.c  ptree.h  queue.c  queue.h  shell.c  shell.h  shell_debug.c  shell_debug.h  shell_fselect.c  shell_fselect.h  shell_keyfunc.c  shell_keyfunc.h  shell_telnet.c  shell_telnet.h  termio.c  (+3 more)
lib/zcmdsh/: command.c  command.h  command_shell.c  command_shell.h  debug.h  debug_backtrace.h  debug_category.h  debug_cmd.c  debug_cmd.h  debug_log.c  debug_log.h  debug_module.c  debug_module.h  debug_module_cmd.c  debug_module_cmd.h  debug_zcmdsh.c  debug_zcmdsh.h  file.c  flag.h  log.c  log_cmd.c  log_cmd.h  shell.c  shell.h  shell_fselect.c  shell_keyfunc.c  shell_keyfunc.h  shell_telnet.c  shell_telnet.h  termio.c
module/common/: pkt_group.h
module/l2fwd/: l2fwd.c  l2fwd_cmd.c  l2fwd_cmd.h  l2fwd_export.h
module/l3fwd/: l3fwd.c  l3fwd.h  l3fwd_cmd.c  l3fwd_common.h  l3fwd_em.c  l3fwd_fib.c  l3fwd_lpm.c  l3fwd_route.h  lpm_route_parse.c
sdplane/: Makefile.am  argv_list.c  argv_list.h  configure.ac  console_shell.c  control_packet.c  control_packet.h  debug_sdplane.c  debug_sdplane.h  dhcp_cmd.c  dhcp_server.c  dhcp_server.h  dpdk_devbind.c  dpdk_flag.c  dpdk_flag.h  dpdk_lcore_cmd.c  dpdk_port_cmd.c  dpdk_port_cmd.h  enhanced_repeater.c  enhanced_repeater.h  fib.c  fib.h  fib4.c  fib6.c  hash_table.c  hash_table.h  include.h  internal_message.c  internal_message.h  jhash.h  l2_repeater.c  l2_repeater.h  l2_switch.c  l2_switch.h  l2fwd.c  l2fwd.c.patch  l2fwd.h  l2fwd_cmd.c  l2fwd_export.h  l2fwd_init.c  (+87 more)
sdplane/debian/: changelog  control  files
sdplane/debian/sdplane/DEBIAN/: control  md5sums
sdplane/module/l2fwd/: l2fwd.c  l2fwd.c.patch  l2fwd_cmd.c  l2fwd_export.h
sdplane/module/l3fwd/: l3fwd.c  l3fwd.h
soft-dplane/: Makefile  l2fwd.h  l2fwd_cmd.c  l2fwd_cmd.h  l2fwd_init.c  l2fwd_main.c  l3fwd.h  l3fwd_em_hlm.h  l3fwd_em_hlm_neon.h  l3fwd_em_hlm_sse.h  l3fwd_event.c  l3fwd_event_internal_port.c  l3fwd_lpm.c  l3fwd_lpm.h  l3fwd_lpm_altivec.h  launch_lthread.c  lpm_route_parse.c  lthread_main.c  main.c  run-l3fwd.sh  soft_dplane.c  soft_dplane.h
style/: Dockerfile  check_gnu_style.sh  check_gnu_style_docker.sh
tests/: Dockerfile  Makefile  Makefile.am  README.md  test_enhanced_repeater.c  test_l2_repeater.c  test_l2repeater.c  test_l2repeater.conf
tests/common/: config.h  sdplane_version_for_test.h  test_assert.c  test_assert.h  test_main.c  test_util.c  test_util.h
tests/config/: l2_repeater.conf  vswitch.conf
tools/: add-ai-comments.sh  ai-commit-helper.sh  ai-stats.sh  check-ai-branch.sh  show-tech.sh
tools/ip-neigh/: README  ip-neigh-add.awk  ip-neigh-del.awk
tools/ip-route/: README  gen-route.sh  ip-route-add.awk  ip-route-del.awk
tools/srv6-pktgen/: Makefile  ns-down.sh  ns-up.sh  readme.md  router-conf.sh  sdplane.conf
tools/update-oss/: README.md  update-oss.sh
tools/update-oss/oss-build/: Makefile.am  configure.ac
tools/update-oss/oss-build/lib/: Makefile.am
tools/update-oss/oss-build/sdplane/: Makefile.am
(+359 files in other folders)
